--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -9,3 +9,9 @@
 .profile-picture.profile-picture-sm {
   height: 64px;
 }
+
+.fixed-row-bottom {
+  position: fixed;
+  bottom: 0;
+  width: 90%;
+}
