--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -10,8 +10,6 @@
   height: 64px;
 }
 
-.fixed-row-bottom {
-  position: fixed;
-  bottom: 0;
-  width: 90%;
+.completed {
+  text-decoration: line-through;
 }
