--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -13,3 +13,11 @@
 .completed {
   text-decoration: line-through;
 }
+
+#to-show {
+  display: none;
+}
+
+#to-hover:hover>#to-show {
+  display: block;
+}
